[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/MADE TOMMY Regular_PERSONAL USE.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/gameover.gd" type="Script" id=2]
[ext_resource path="res://assets/images/brown-ribbon-badge.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=2]
size = 33
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.129412, 0.0666667, 0.890196, 1 )

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 1 )

[node name="Gameover" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_left = 1.0
margin_top = -1.0
margin_right = 1001.0
margin_bottom = 599.0

[node name="NextButton" type="Button" parent="Background"]
margin_left = 600.0
margin_top = 500.0
margin_right = 800.0
margin_bottom = 550.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Play Again"

[node name="Header" type="ColorRect" parent="Background"]
margin_right = 1000.0
margin_bottom = 100.0
color = Color( 1, 0.113725, 0, 1 )

[node name="HeaderLabel" type="Label" parent="Background/Header"]
margin_top = 16.0
margin_right = 1000.0
margin_bottom = 86.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1

[node name="Badge" type="Sprite" parent="Background"]
position = Vector2( 249, 331 )
scale = Vector2( 0.468333, 0.598875 )
texture = ExtResource( 3 )

[node name="SubscribersLabel" type="Label" parent="Background"]
margin_left = 468.0
margin_top = 219.0
margin_right = 768.0
margin_bottom = 259.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Total Subscribers:"
align = 2

[node name="MoneyLabel" type="Label" parent="Background"]
margin_left = 469.0
margin_top = 286.0
margin_right = 769.0
margin_bottom = 326.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Total Money Earned:"
align = 2

[node name="HappinessLabel" type="Label" parent="Background"]
margin_left = 470.0
margin_top = 356.0
margin_right = 770.0
margin_bottom = 396.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Total Happiness Points:"
align = 2

[node name="SubscribersNumLabel" type="Label" parent="Background"]
margin_left = 783.0
margin_top = 212.0
margin_right = 983.0
margin_bottom = 257.0
custom_colors/font_color = Color( 1, 0.113725, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "100000"

[node name="MoneyNumLabel" type="Label" parent="Background"]
margin_left = 783.0
margin_top = 281.0
margin_right = 983.0
margin_bottom = 326.0
custom_colors/font_color = Color( 1, 0.113725, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "100000"

[node name="HappinessNumLabel" type="Label" parent="Background"]
margin_left = 783.0
margin_top = 351.0
margin_right = 983.0
margin_bottom = 396.0
custom_colors/font_color = Color( 1, 0.113725, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "100000"

[connection signal="button_down" from="Background/NextButton" to="." method="_on_NextButton_button_down"]
